--- a/TaskDropper/TaskDropper.Core/TaskDropper.Core.csproj
+++ b/TaskDropper/TaskDropper.Core/TaskDropper.Core.csproj
@@ -6,7 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="MvvmCross" Version="6.2.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
+    <PackageReference Include="Xamarin.Auth" Version="1.6.0.4" />
   </ItemGroup>
 
 </Project>
