--- a/TaskDropper/TaskDropper.Droid/TaskDropper.Droid.csproj
+++ b/TaskDropper/TaskDropper.Droid/TaskDropper.Droid.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DatabaseConnectionService.cs" />
     <Compile Include="Setup.cs" />
+    <Compile Include="ViewAdapters\CustomPagerAdapter.cs" />
     <Compile Include="ViewAdapters\MvxViewPagerFragmentAdapter.cs" />
     <Compile Include="ViewAdapters\TasksListAdapter.cs" />
     <Compile Include="ViewAdapters\TasksViewHolder.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="Views\MainView.cs" />
     <Compile Include="Views\TaskChangedFragment.cs" />
     <Compile Include="Views\TaskListFragment.cs" />
+    <Compile Include="Views\TestFragment.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\NK123.otf" />
@@ -187,6 +189,11 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\login_view.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\custom_tab.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
