--- a/TaskDropper/TaskDropper.iOS/Info.plist
+++ b/TaskDropper/TaskDropper.iOS/Info.plist
@@ -60,16 +60,18 @@
 			<string>Document Type 1</string>
 		</dict>
 	</array>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>audio</string>
-		<string>location</string>
-	</array>
 	<key>NSCameraUsageDescription</key>
 	<string>This permission nedd to working with camera</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This permission nedd to working with location </string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>This permission nedd to working with location </string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>media</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>NK123.otf</string>
+		<string>Resources/NK123.otf</string>
+	</array>
 </dict>
 </plist>
