--- a/TaskDropper/TaskDropper.iOS/TaskDropper.iOS.csproj
+++ b/TaskDropper/TaskDropper.iOS/TaskDropper.iOS.csproj
@@ -264,6 +264,18 @@
     <ImageAsset Include="Assets.xcassets\Checked.imageset\Contents.json">
       <Visible>false</Visible>
     </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\LaunchScreen.imageset\Contents.json">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\LaunchScreen.imageset\launcscreen.jpg">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\LaunchScreen.imageset\launcscreen1.jpg">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\LaunchScreen.imageset\launcscreen2.jpg">
+      <Visible>false</Visible>
+    </ImageAsset>
     <ImageAsset Include="Assets.xcassets\LogOutButton.imageset\LogoutIcon.png">
       <Visible>false</Visible>
     </ImageAsset>
