--- a/TaskDropper/TaskDropper.Forms/TaskDropper.Forms.Android/TaskDropper.Forms.Android.csproj
+++ b/TaskDropper/TaskDropper.Forms/TaskDropper.Forms.Android/TaskDropper.Forms.Android.csproj
@@ -57,8 +57,14 @@
     <PackageReference Include="MvvmCross">
       <Version>6.2.2</Version>
     </PackageReference>
-    <PackageReference Include="MvvmCross.Droid.Support.V7.AppCompat">
+    <PackageReference Include="MvvmCross.Droid.Support.Design">
       <Version>6.2.2</Version>
+    </PackageReference>
+    <PackageReference Include="MvvmCross.Droid.Support.Fragment">
+      <Version>6.2.2</Version>
+    </PackageReference>
+    <PackageReference Include="MvvmCross.Droid.Support.V7.AppCompat">
+      <Version>6.2.3</Version>
     </PackageReference>
     <PackageReference Include="MvvmCross.Forms">
       <Version>6.2.2</Version>
@@ -66,18 +72,24 @@
     <PackageReference Include="MvvmCross.Plugin.PictureChooser">
       <Version>6.2.2</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.Permissions">
+      <Version>3.0.0.12</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Android.Support.Compat">
+      <Version>27.0.2.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Android.Support.v4">
+      <Version>27.0.2.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Auth">
       <Version>1.6.0.4</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.0.1</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Xamarin.Forms" Version="3.6.0.220655" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="27.0.2.1" />
-    <PackageReference Include="Xamarin.Android.Support.v4" Version="27.0.2.1" />
-    <PackageReference Include="Xamarin.Android.Support.v7.CardView" Version="27.0.2.1" />
-    <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="27.0.2.1" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration.cs" />
@@ -88,6 +100,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RootActivity.cs" />
     <Compile Include="Services\DatabaseConnectionService.cs" />
+    <Compile Include="Services\PermissionService.cs" />
     <Compile Include="Services\PhotoService.cs" />
     <Compile Include="Setup.cs" />
     <Compile Include="SplashScreen.cs" />
