--- a/TaskDropper/TaskDropper.Forms/TaskDropper.Forms.Android/TaskDropper.Forms.Android.csproj
+++ b/TaskDropper/TaskDropper.Forms/TaskDropper.Forms.Android/TaskDropper.Forms.Android.csproj
@@ -100,7 +100,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RootActivity.cs" />
     <Compile Include="Services\DatabaseConnectionService.cs" />
-    <Compile Include="Services\PermissionService.cs" />
     <Compile Include="Services\PhotoService.cs" />
     <Compile Include="Setup.cs" />
     <Compile Include="SplashScreen.cs" />
@@ -167,6 +166,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Checked.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Unchecked.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
