Work with JWT token in Core

--- a/TaskDropper/TaskFropper.WPF/TaskFropper.WPF.csproj
+++ b/TaskDropper/TaskFropper.WPF/TaskFropper.WPF.csproj
@@ -97,6 +97,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Resources\Controls\CircleButtons.xaml.cs">
+      <DependentUpon>CircleButtons.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Resources\Controls\GroupRadioButton.xaml.cs">
       <DependentUpon>GroupRadioButton.xaml</DependentUpon>
     </Compile>
@@ -128,6 +131,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Resources\Controls\CircleButtons.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Resources\Controls\GroupRadioButton.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -137,6 +144,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Resources\Controls\ScrollBar.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Resources\Theme\Button.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -208,6 +219,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Image\launcscreen.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Image\icons8-evil-48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Image\qwe.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
